fixed wisth alignment

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -84,3 +84,7 @@ p {
   text-align: center;
   background-color: #f1f1f1;
 }
+
+.statsImg {
+  max-width: 100%;
+}
